<resources>
    <string name="app_name">GPS Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_display">Main Menu</string>
    <string name="title_main">Pepe\'s Socket</string>
    <string name="description"> </string>
    <string name="missing"> <u>Forgot Password or Username?</u> </string>
    <string name="time">HH:MM:SS</string>
    <string name="date">MM/DD/YY</string>
    <string name="address">address/etc</string>
</resources>
